--- a/theme/boost/templates/header.mustache
+++ b/theme/boost/templates/header.mustache
@@ -18,6 +18,7 @@
     Page header.
 }}
 <header role="banner" class="pos-f-t navbar navbar-full navbar-light bg-faded navbar-static-top moodle-has-zindex">
+<!-- Sucer modifico este header -->
 
     <div class="container-fluid navbar-nav">
 
