--- a/theme/boost/templates/login.mustache
+++ b/theme/boost/templates/login.mustache
@@ -70,7 +70,7 @@
         {{{ output.standard_end_of_body_html }}}
     </div>
 </footer>
-
+<!-- probando cambios en vivo -->
 </body>
 </html>
 {{#js}}
